# suisai

./: .gitignore  Cargo.toml  README.md  init_auth.srql  init_db.srql
src/: main.rs
src/controllers/: album.rs  auth.rs  directory.rs  file.rs  mod.rs
src/endpoints/: album.rs  auth.rs  axum_error.rs  mod.rs  photo.rs
src/models/: album.rs  auth.rs  directory.rs  file.rs  mod.rs  photo.rs
src/utils/: album.rs  auth.rs  axum_error.rs  directory.rs  get_id.rs  mod.rs
