[package]
name = "suisai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = { version = "0.7.2", features = ["http2", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
surrealdb = "1.0.1"
pwhash = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.108"
base64 = "0.21.5"
async-recursion = "1.0.5"
tower-http = { version = "0.5.0", features = ["cors"] }
anyhow = "1.0.75"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
once_cell = "1.19.0"
