[package]
name = "suisai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5", features = ["http2", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = "1.5.2"
pwhash = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.117"
base64 = "0.22.1"
async-recursion = "1.1.1"
tower-http = { version = "0.5.2", features = ["cors"] }
anyhow = "1.0.86"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
once_cell = "1.19.0"
